[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/ovelha.gd" type="Script" id=1]
[ext_resource path="res://assets/New Piskel.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 4 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 4 )

[node name="ovelha" type="KinematicBody2D" groups=["hitted"]]
z_index = -2
collision_layer = 8
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 1 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 21

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 1 )
scale = Vector2( 6, 1 )
shape = SubResource( 4 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -4, 1 )
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 2

[node name="RayCast2D2" type="RayCast2D" parent="."]
position = Vector2( 2, 1 )
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 2

[node name="Timer" type="Timer" parent="."]
pause_mode = 2
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
